// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldArea component Creates a text field 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-text"
>
  <div
    className="components-base-control caldera-field caldera-field-text"
  >
    <div
      className="components-base-control__field"
    >
      <span
        className="components-base-control__label"
      >
        First Name
      </span>
      <input
        aria-describedby="undefined__help"
        className="components-text-control__input"
        id="firstName"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="roy"
      />
    </div>
    <p
      className="components-base-control__help"
      id="undefined__help"
    >
      your first name
    </p>
  </div>
</div>
`;

exports[`FieldArea component Creates an select field 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-text"
>
  <div
    className="components-base-control caldera-field caldera-field-select"
  >
    <div
      className="components-base-control__field"
    >
      <label
        className="components-base-control__label"
        htmlFor="selectFieldId"
      >
        Select Field Label
      </label>
      <select
        aria-describedby="selectFieldId__help"
        className="components-select-control__input"
        id="selectFieldId"
        multiple={false}
        onChange={[Function]}
        value={1}
      >
        <option
          value={0}
        >
          Zero
        </option>
        <option
          value={1}
        >
          One
        </option>
        <option
          value={2}
        >
          Two
        </option>
      </select>
    </div>
    <p
      className="components-base-control__help"
      id="selectFieldId__help"
    >
      Select field description
    </p>
  </div>
</div>
`;

exports[`FieldArea component Shows errors 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-text"
>
  <div
    className="components-base-control caldera-field caldera-field-text"
  >
    <div
      className="components-base-control__field"
    >
      <span
        className="components-base-control__label"
      >
        First Name
      </span>
      <input
        aria-describedby="undefined__help"
        className="components-text-control__input"
        id="firstName"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="roy"
      />
    </div>
    <p
      className="components-base-control__help"
      id="undefined__help"
    >
      your first name
    </p>
  </div>
  <div
    className="caldera-components-message has-error caldera-components-error"
  >
    Fail Cake!
  </div>
</div>
`;
